Bug 155346 - CRASH: trying to copy/paste protected content
Summary: CRASH: trying to copy/paste protected content
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.6.0 target:7.5.4.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Crash
  Show dependency treegraph
 
Reported: 2023-05-16 08:15 UTC by Xisco Faulí
Modified: 2023-05-31 11:09 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (145.44 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-05-16 08:15 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-05-16 08:15:36 UTC
Created attachment 187319 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Select all 3 times
3. Copy
4. Paste -> message 'Write-protected content cannot be changed.' is displayed
5. Click ok

-> At this point it might crash. if not, repeat steps 2 3 and 4 and it will crash.

Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d81379db730a163c5ff75d4f3a3cddbd7b5eddda
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-05-16 08:16:26 UTC
Regression introduced by:

author	Michael Stahl <michael.stahl@allotropia.de>	2023-05-08 16:38:03 +0200
committer	Michael Stahl <michael.stahl@allotropia.de>	2023-05-09 10:34:40 +0200
commit d81379db730a163c5ff75d4f3a3cddbd7b5eddda (patch)
tree 27ceb91b3da10a4e00df329a73512b44afde00c6
parent edf471ba8b5a69ce26e68eff26283b304c4c9a9e (diff)
tdf#154877 sw: generalise ExtendedSelectAll()

Bisected with: bibisect-linux64-7.6

Adding Cc: to Michael Stahl
Comment 2 Commit Notification 2023-05-19 09:42:32 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/595b42b686b33bbba0eeba1740277b5f6e0f5433

tdf#155346 sw: fix crash from changing modal mode

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Stahl 2023-05-19 10:22:41 UTC
fixed on master

its possible that there are other similar crashes, but i can't predict where...
Comment 4 Commit Notification 2023-05-22 09:28:02 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/8a7fbac52b29da29564e1533030f111ec7e4e9ac

tdf#155346 sw: fix crash from changing modal mode

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-05-30 19:41:23 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-4":

https://git.libreoffice.org/core/commit/c2efddb1839ef5936daf69e62f4b9436bbbbc6cd

tdf#155346 sw: fix crash from changing modal mode

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.