tdf#155346 sw: fix crash from changing modal mode

When closing the dialog, UpdateCursor() creates a table cursor for
ExtendedSelectedAll() because mbSelectAll isn't set.

1  SwShellTableCursor::SwShellTableCursor
2  SwCursorShell::UpdateCursor
3  SwCursorShell::ShowCursor
4  SwView::ShowCursor
5  SfxViewFrame::Enable
6  SfxViewFrame::Notify
7  SfxBroadcaster::Broadcast
8  SfxObjectShell::SetModalMode_Impl
9  SfxViewFrame::SetModalMode

(regression from commit d81379db730a163c5ff75d4f3a3cddbd7b5eddda)

Change-Id: Ie73f8e42f764f8041288eb0850721a530d106a0e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151880
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>